# ChessGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Gomoku/: CMakeLists.txt  Chessboard.cpp  Chessboard.h  Gomoku.cpp  Gomoku.h  README.md  brain.cpp  config.h.in  main.cpp  test_sample.txt
Gomoku/algorithm/: ai.cpp  ai.h  alpha_beta.cpp  normal.cpp  uct.cpp
Gomoku/protocal/: example.cpp  pisqpipe.cpp  pisqpipe.h
Gomoku/protocol/: CMakeLists.txt  README_EN.txt
Gomoku/skel_cpp/: CMakeLists.txt  README.md  example.cpp  pisqpipe.cpp  pisqpipe.h  skel_cpp_config.h.in
